--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.1.4",
+    "eslint": "^8.40.0",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "discord.js": "^14.11.0",
+    "dotenv": "^16.0.3"
   }
 }
