--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "nodemon --config nodemon.json src/index.ts",
     "start": "node .",
-    "build": "tsc"
+    "build": "tsc",
+    "deploy": "cross-env IS_SCRIPT=true ts-node src/scripts/deploy",
+    "deploy-prod": "cross-env NODE_ENV=production npm run deploy"
   },
   "keywords": [],
   "author": "Aristos Xanthus",
@@ -19,6 +21,7 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "cross-env": "^7.0.3",
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.3"
   }
