--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@google-cloud/text-to-speech": "^4.2.2",
     "cross-env": "^7.0.3",
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.3",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "unique-filename": "^3.0.0"
   }
 }
